# feldman_secret_sharing

./: Cargo.toml  README.md
src/: feldman_secret_gen.rs  main.rs
